# marketDataHandler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/app/: feed_handler.cpp  feed_handler.hpp
include/core/: cpu_affinity.cpp  cpu_affinity.hpp  event_loop.cpp  event_loop.hpp  latency_tracker.hpp  ring_buffer.hpp  timestamp.hpp
include/network/: multicast.cpp  multicast.hpp  recv_buffer.cpp  recv_buffer.hpp  udp_socket.cpp  udp_socket.hpp
include/protocol/fix/: fix_parser.cpp  fix_parser.hpp
src/: main.cpp
src/app/: feed_handler.cpp
src/core/: cpu_affinity.cpp  event_loop.cpp
src/network/: multicast.cpp  recv_buffer.cpp  udp_socket.cpp
tests/: test_fix_parser.cpp  test_ring_buffer.cpp
